Fix JavaDoc generation and enable `html` checks again
Fix #116